syntax = "proto3";


package book;

service BookService {
  rpc FindOne (FindBookByIdDto) returns (Book) {}
}

message FindBookByIdDto {
  int32 id = 1;
}

message Book {
  int32 id = 1;
  string bookName = 2;
  string publishBy = 3;
  string publishYear = 4;
  string author = 5;
}